--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Basket Case",
+  "author": "RWHackathon Basket Case",
   "description": "",
   "homepage": "https://github.com/Omnifi/RWHackathonBasketCase",
   "license": "UNLICENSED",
