--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "async": "^2.0.0-rc.6",
+    "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
